# pressio-sisc-burgers1d

./: README.md  TODO  bar_plot.py  do_all_cpp.sh  do_all_python.sh  line_plot.py
advDiffReac2d/: cmake_generators_for_pressio-builder.sh  cmd_line_options.sh  cmd_line_options_build.sh  constants_chem.py  constants_ms.py  create_all_meshes.py  create_mesh.py  create_single_mesh.py  do_all.sh  do_all_cpp.sh  do_build.sh  do_chemistry_fom.sh  do_chemistry_lspg_full_mesh.sh  do_chemistry_lspg_sample_mesh.sh  do_jphi_prod.sh  do_manuf_solution.sh  global_vars.sh  mesh_utils.py  myutils_chem.py  myutils_common.py  myutils_ms.py
advDiffReac2d/build_scripts/: build.sh  cmake_generators_for_pressio-builder.sh
advDiffReac2d/common/: cmd_line_options.sh  constants.py  global_vars.sh
advDiffReac2d/cpp/build_scripts/: build.sh
advDiffReac2d/cpp/plot_scripts/: plot_chem.py  plot_ms.py  plot_psi.py
advDiffReac2d/cpp/sample_meshes/: create.py
advDiffReac2d/cpp/src/: CMakeLists.txt  adr2d_eigen.hpp  input.template  input_parser.hpp
advDiffReac2d/cpp/src/functors/: advection_field_functors.hpp  source_term_functors.hpp
advDiffReac2d/cpp/src/mains/: main_eigen_chem_fom_bdf1.cc  main_eigen_chem_fom_rk4.cc  main_eigen_fom.cc  main_eigen_manuf_sol_fom_bdf1.cc  main_eigen_ms_fom_rk4.cc
advDiffReac2d/cpp/src/observers/: eigen_observer.hpp
advDiffReac2d/help_scripts/: constants_chem.py  constants_jphi.py  myutils_common.py  myutils_jphi.py
advDiffReac2d/meshing/: create_all_meshes.py  create_single_mesh.py  mesh_utils.py  natural_order_mesh.py
advDiffReac2d/plot_scripts/: plot_chem.py  plot_chem_rom.py  plot_common.py  plot_ms.py
advDiffReac2d/run_scripts/: myutils_chem.py  myutils_common.py  myutils_ms.py  run_fom_basis.py  run_fom_ms.py  run_fom_timing.py  run_jphi_timing.py  run_rom_full_mesh_timing.py  run_rom_sample_mesh_timing.py
advDiffReac2d/sample_meshes/: create.py
advDiffReac2d/src/: CMakeLists.txt  adr2d_eigen.hpp  adr2d_kokkos.hpp  eigen_observer.hpp  eigen_utils.hpp  input.template  input_parser.hpp  kokkos_observer.hpp  kokkos_utils.hpp
advDiffReac2d/src/eigen/: adr2d_eigen.hpp  eigen_observer.hpp  eigen_sample_mesh_time_discrete_ops.hpp  eigen_utils.hpp
advDiffReac2d/src/functors/: advection_cellular_flow_functor.hpp  advection_four_eddy_model_functor.hpp  advection_manuf_sol_functor.hpp  source_term_chemABC_functor.hpp  source_term_functors.hpp  source_term_manuf_sol_functor.hpp
advDiffReac2d/src/kokkos/: adr2d_jacobian_functor.hpp  adr2d_kokkos.hpp  adr2d_velocity_functor.hpp  kokkos_observer.hpp  kokkos_sample_mesh_time_discrete_ops.hpp  kokkos_utils.hpp
advDiffReac2d/src/mains/: main_eigen_chem_fom_bdf1.cc  main_eigen_chem_fom_rk4.cc  main_eigen_chem_lspg_full_mesh_bdf1.cc  main_eigen_chem_lspg_sample_mesh_bdf1.cc  main_eigen_fom.cc  main_eigen_jphi_prod.cc  main_eigen_ms_fom_bdf1.cc  main_eigen_ms_fom_rk4.cc  main_kokkos_chem_fom_rk4.cc  main_kokkos_chem_lspg_full_mesh_bdf1.cc  main_kokkos_chem_lspg_sample_mesh_bdf1.cc  main_kokkos_fom.cc  main_kokkos_jphi_prod.cc
advDiffReac2d/src/mains_eigen/: main_eigen_chem_fom_bdf1.cc  main_eigen_chem_fom_rk4.cc  main_eigen_chem_lspg_full_mesh_bdf1.cc  main_eigen_fom.cc  main_eigen_ms_fom_bdf1.cc  main_eigen_ms_fom_rk4.cc
advDiffReac2d/src/mains_kokkos/: main_kokkos_chem_fom_rk4.cc
burgers1d/: bar_plot.py  build_cpp.sh  cmd_line_options.sh  do_all.sh  do_all_cpp.sh  do_all_python.sh  do_plot.sh  global_vars.sh  line_plot.py  plot_state.py
burgers1d/common/: cmd_line_options.sh  constants.py  constants_galerkin.py  constants_lspg.py  global_vars.sh  global_vars_cpp.sh  global_vars_py.sh
burgers1d/cpp/: CMakeLists.txt  build.sh  burgers1d_eigen.cc  burgers1d_eigen.hpp  main_fom.cc  main_rom.cc  utils.hpp
burgers1d/cpp/build_scripts/: build.sh  build_cpp.sh  cmake_generators_for_pressio-builder.sh
burgers1d/cpp/run_scripts/: myutils.py  run_fom_basis.py  run_fom_timing.py  run_rom_timing.py
burgers1d/cpp/src/: CMakeLists.txt  burgers1d_eigen.cc  burgers1d_eigen.hpp  burgers1d_input_parser.hpp  eigen_observer.hpp  input.template  main_fom.cc  main_fom_bdf1.cc  main_fom_rk4.cc  main_fom_velocity.cc  main_rom.cc  main_rom_galerkin.cc  main_rom_galerkin_play.cc  main_rom_lspg.cc  utils.hpp
burgers1d/cpp/src/playground/: main_rom_galerkin_play.cc
burgers1d/cpp/src/revive/: main_rom_lspg.cc
burgers1d/python/build_scripts/: build.sh  cmake_generators_for_pressio-builder.sh
burgers1d/python/run_scripts/: run_fom_timing.py  run_rom_timing.py
burgers1d/python/src/: burgers1d.py  burgers1d_old.py  main_rom.py  main_rom_galerkin.py  main_rom_lspg.py
common/: cmd_line_options_plot.sh  constants_galerkin.py  global_vars_cpp.sh  global_vars_py.sh
cpp/build_scripts/: cmake_generators_for_pressio-builder.sh
cpp/run_scripts/: myutils.py  run_fom_timing.py
cpp/src/: CMakeLists.txt  burgers1d_eigen.hpp  burgers1d_input_parser.hpp  main_fom_rk4.cc  main_rom_galerkin.cc  main_rom_lspg.cc  utils.hpp
mat-mat/: do_all_cpp.sh  do_all_python.sh  run_timing.py
mat-mat/common/: cmd_line_options.sh  constants.py  global_vars.sh
mat-mat/cpp/: myutils.py
mat-mat/cpp/build_scripts/: build.sh
mat-mat/cpp/run_scripts/: myutils.py  run_timing.py
mat-mat/cpp/src/: CMakeLists.txt  input.template  input_parser.hpp  main_dgemm.cc  main_spgemm.cc
mat-mat/python/: dgemm.py  myutils.py  run_timing.py  spgemm.py
mat-mat/python/build_scripts/: build.sh
python/build_scripts/: build.sh
python/run_scripts/: run_rom_timing.py
python/src/: burgers1d.py  main_rom_galerkin.py  main_rom_lspg.py
python/src/playground/: main_fom_velocity.py  main_rom_galerkin_play.py
